Update api server data models and portal configuration
